# design-system

./: .env.release.example  .gitignore  .prototools  AGENTS.md  CLAUDE.md  Cargo.toml  GLOSSARY.md  README.md  dagger.json  loop.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  registry.json  scatch.md  tsconfig.base.json
.claude/: settings.local.json
.claude/rules/: architecture.md  capabilities.md  development.md  testing.md  wit-syntax.md
.github/workflows/: ci.yml  publish-graphite.yml  publish-loop-cli.yml  vercel-site.yml
.moon/: toolchain.yml  workspace.yml
app/: page.tsx
apps/shell-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/shell-ui/src/: App.tsx  index.css  main.tsx
apps/ui-demo/: index.html  package.json  vite.config.ts
apps/ui-demo/src/: App.tsx  index.css  main.tsx
apps/workbench/: index.html  package.json  tsconfig.json  vite.config.ts
apps/workbench/src/: App.tsx  componentCatalog.ts  index.css  main.tsx
benchmarks/: README.md  runtime-matrix.md
crates/host-shell/: Cargo.toml
crates/host-shell/src/: main.rs
crates/loop/: Cargo.toml
crates/loop-cli/: Cargo.toml
crates/loop-cli/src/: main.rs
crates/loop-cli/src/commands/: build.rs  check.rs  init.rs  mod.rs  new.rs  run.rs
crates/loop-cli/src/runtime/: host.rs
crates/loop-cli/src/templates/: mod.rs
crates/loop-cli/templates/rust/: Cargo.toml.tera  lib.rs.tera  world.wit.tera
crates/loop-cli/templates/rust-component/: Cargo.toml.tera  gitignore.tera  lib.rs.tera  world.wit.tera
crates/loop-cli/templates/rust/.cargo/: config.toml.tera
crates/loop-cli/templates/rust/src/: lib.rs.tera
crates/loop-cli/templates/rust/wit/: deps.toml.tera
crates/loop-cli/templates/workspace/: loop.toml.tera
crates/loop-runtime/: Cargo.toml  build.rs
crates/loop-runtime/src/: lib.rs
crates/loop-runtime/src/host/: canvas.rs  logging.rs  mod.rs  types.rs  window.rs
crates/loop-runtime/wit/: input.wit  window.wit  world.wit
crates/loop/src/: cli.rs  main.rs
crates/loop/src/commands/: build.rs  dev.rs  mod.rs  new.rs  run.rs
crates/loop/src/host/: graphics.rs  mod.rs  window.rs
crates/loop/src/project/: mod.rs
crates/loop/src/runtime/: host.rs  mod.rs  window.rs
crates/loop/src/templates/: mod.rs
crates/loop/src/watcher/: mod.rs
docs/: host-shell.md  legacy-site.md  loop-audit-report.md  repo-migration.md
examples/hello-window/: Cargo.toml
examples/hello-window/src/: lib.rs
examples/hello-window/wit/: deps.toml  world.wit
examples/nitric/loop-registry/: .env.registry.example  README.md  nitric.yaml  package-lock.json  package.json  tsconfig.json
examples/nitric/loop-registry/services/: api.ts
examples/window-tao/: README.md
knowledge/: capabilities-runtime.md  capability-providers.md  effect-system.md  js-engines-benchmarking.md  runtime-bundling.md  wasm-tooling.md  wit-notes.md
knowledge/ambient/: ambient-research.md
knowledge/ambient/data/: ambient_audio_library.json
loop/components/dock-starter/: loop.component.json
loop/components/dock-starter/files/: DockStarter.tsx
loop/components/ui-button/: loop.component.json
loop/components/ui-demo-starter/: loop.component.json
loop/components/ui-demo-starter/files/: UiDemoStarter.tsx
loop/components/ui-dock-workspace/: loop.component.json
loop/components/ui-dock-workspace/files/: UiDockWorkspace.tsx
loop/components/ui-prose/: loop.component.json
loop/components/ui-prose/files/: prose.css  prose.tsx
loop/components/ui-shortcuts-settings/: loop.component.json
loop/components/ui-shortcuts-settings/files/: ShortcutSettingsPanel.tsx
loop/components/ui-theme-manager/: loop.component.json
loop/components/ui-theme-manager/files/: ThemeManagerPanel.tsx
loop/components/ui-token-editor/: loop.component.json
loop/components/ui-token-editor/files/: TokenEditorPanel.tsx
loop/installs/: components.lock.json
shadcn-registry/: components.json  next.config.ts  package.json  registry.json  tsconfig.json
shadcn-registry/app/docs/: page.tsx
shadcn-registry/app/docs/dockview/: page.tsx
shadcn-registry/app/docs/jazz/: page.tsx
shadcn-registry/app/docs/physics/: page.tsx
shadcn-registry/app/docs/sidebar/: page.tsx
shadcn-registry/components/: docs-page.tsx  providers.tsx
shadcn-registry/components/ui/: primitives.tsx
shadcn-registry/hooks/: use-history.ts  use-hooks.ts
shadcn-registry/lib/layout/: leftdock.ts
shadcn-registry/registry/atoms/: tree.tsx
shadcn-registry/registry/blocks/jettbot/: page.tsx
shadcn-registry/registry/realtime-ai/: discord-bridge.tsx
site/: package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  page.tsx
site/app/docs/: layout.tsx
site/app/docs/dnd/: page.tsx
site/app/playground/: layout.tsx  page.tsx
site/app/skraps/: page.tsx
site/app/state/: state.tsx
site/components/: PixelBlast.tsx  app-sidebar.tsx
site/components/docs/: docs-page.tsx  example.tsx
site/components/ui/: sidebar.tsx  tabs.tsx
site/hooks/: use-frame.ts  use-panel-board.ts
site/public/r/: example-form.json
site/registry/jazz/: jazz-demo-1.tsx
site/registry/toolchain/: full-ide.tsx  source-file.ts  webcontainer-filetree.tsx
templates/node-lib/: README.md  package.json  template.yml  tsconfig.json
templates/node-lib/src/: index.ts
templates/vite-shadcn-app/: README.md  components.json  index.html  package.json  template.yml  tsconfig.json  vite.config.ts
templates/vite-shadcn-app/src/: App.tsx  index.css
tools/automation/: dagger-from-env.mjs  dagger-run.mjs
tools/dagger/: package.json  tsconfig.json
tools/dagger/src/: index.ts
tools/proto/plugins/: dotenvx.toml  nitric.toml
tools/release/: loop-smoke.mjs  publish-all.mjs  publish-loop-cli-stack.mjs  run-loop-cli-dev.mjs  run-loop-cli-stable.mjs  run-loop-cli.mjs  run-loop-task-shim.mjs
tools/shell/: dev-shell-local.mjs
wit/: canvas.wit  logging.wit  types.wit  ui.wit  window.wit  world.wit
wit/experimental/: assets.wit
wit/loop-core/: world.wit
wit/loop-fx/: world.wit
wit/loop-pkg/: world.wit
wit/loop-ui/: world.wit
wit/loop-window/: world.wit
(+35 files in other folders)
