# Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
wasmtime = { version = "29", features = ["component-model", "cranelift", "async"] }
wasmtime-wasi = "29"
wasmtime-wasi-io = "29"

# WASI GFX - these provide the host implementations
wasi-surface-wasmtime = { git = "https://github.com/aspect-build/aspect", branch = "main" }
wasi-graphics-context-wasmtime = { git = "https://github.com/aspect-build/aspect", branch = "main" }
wasi-frame-buffer-wasmtime = { git = "https://github.com/aspect-build/aspect", branch = "main" }

# Guest bindings
wit-bindgen = "0.36"

# CLI
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
indicatif = "0.17"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
which = "7"
walkdir = "2"