# Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

wasi-frame-buffer-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
wasi-graphics-context-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
wasi-surface-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }

wasmtime = { version = "29", features = ["component-model", "cranelift", "async"] }
wasmtime-wasi = "29"
wasmtime-wasi-io = "29"

# Guest bindings
wit-bindgen = "0.36"

# CLI
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
indicatif = "0.17"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Utilities  
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
which = "7"
walkdir = "2"
raw-window-handle = "0.6.2"
softbuffer = "0.4.8"
winit = "0.30.12"