# Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

# Core WASM
wit-bindgen = "0.36"
wit-deps = "0.4"

# wasi-gfx implementations
wasi-webgpu-wasmtime = { git = "https://github.com/WebAssembly/wasi-gfx-runtime", branch = "main" }
wasi-frame-buffer-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
wasi-graphics-context-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
wasi-surface-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main", features = ["winit"]}




# Wasmtime WASI
wasmtime = "=38.0.4"
wasmtime-wasi = "=38.0.4"
wasmtime-wasi-io = "=38.0.4"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"

# Utilities
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"