# crates/loop-cli/Cargo.toml
[package]
name = "loop-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
loop-runtime = { path = "../loop-runtime" }

clap.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
handlebars.workspace = true
walkdir.workspace = true
which.workspace = true
directories.workspace = true

[build-dependencies]
anyhow.workspace = true