# crates/loop-cli/Cargo.toml
[package]
name = "loop-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
loop-runtime = { path = "../loop-runtime" }
clap.workspace = true
console.workspace = true
indicatif.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
which.workspace = true
walkdir.workspace = true
serde.workspace = true