# crates/loop-cli/Cargo.toml
[package]
name = "loop-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
loop-runtime = { path = "../loop-runtime" }

clap.workspace = true
console.workspace = true
dialoguer.workspace = true
anyhow.workspace = true
toml.workspace = true
wit-deps.workspace = true