[package]
name = "loop-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-io = { workspace = true }

wasi-surface-wasmtime.workspace = true
wasi-graphics-context-wasmtime.workspace = true
wasi-frame-buffer-wasmtime.workspace = true

anyhow.workspace = true
tokio.workspace = true
futures.workspace = true

# Supposedly we don't even need a build script (so build deps don't matter)
# [build-dependencies]
# wit-deps.workspace = true
