[package]
name = "loop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
tao = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Additional dependencies
wit-bindgen = "0.19"
wit-component = "0.20"
futures = "0.3"
crossbeam-channel = "0.5"