[package]
name = "loop-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
wasmtime = { version = "17.0", features = ["component-model"] }
wasmtime-wasi = "17.0"
tao = "0.24"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
notify = "6.1"
include_dir = "0.7"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "6.0"
colored = "2.0"
indicatif = "0.17"
crossbeam-channel = "0.5"

[build-dependencies]
include_dir = "0.7"